--- a/Gizmo.Client.UI.Resources/Properties/Resources.tr-TR.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.tr-TR.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: tr-TR, Turkish
   Exported by: Oleg Savelos
-  Exported at: Tue, 18 Jul 2023 16:58:38 +0300 
+  Exported at: Thu, 20 Jul 2023 15:11:29 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -1284,5 +1284,8 @@
   </data> 
   <data name="GIZ_GEN_VE_INVALID_FIELD" xml:space="preserve"> 
     <value>Bu alan geçersiz.</value> 
+  </data> 
+  <data name="GIZ_USER_PROFILE_USERNAME_TIP" xml:space="preserve"> 
+    <value>Diğer kullanıcılar kullanıcı adınızı görecek</value> 
   </data> 
 </root>
