--- a/Gizmo.Client.UI.Resources/Properties/Resources.az-latn-az.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.az-latn-az.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: az-Latn-AZ, Azerbaijani
   Exported by: Oleg Savelos
-  Exported at: Tue, 18 Jul 2023 16:58:35 +0300 
+  Exported at: Thu, 20 Jul 2023 15:11:25 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -244,7 +244,7 @@
     <value>Şifrəni təsdiqləyin</value> 
   </data> 
   <data name="GIZ_GEN_CONTINUE" xml:space="preserve"> 
-    <value>Davam et</value> 
+    <value>Giriş et</value> 
   </data> 
   <data name="GIZ_GEN_EMAIL" xml:space="preserve"> 
     <value>E-poçt</value> 
@@ -268,7 +268,7 @@
     <value>Coin</value> 
   </data> 
   <data name="GIZ_GEN_POPULAR_ITEMS" xml:space="preserve"> 
-    <value>Populyar cihazlar</value> 
+    <value>Ən çox işlədilən cihazlar</value> 
   </data> 
   <data name="GIZ_GEN_REPEAT_NEW_PASSWORD" xml:space="preserve"> 
     <value>Yeni şifrəni təkrarla</value> 
@@ -298,7 +298,7 @@
     <value>Login</value> 
   </data> 
   <data name="GIZ_GEN_VERIFY" xml:space="preserve"> 
-    <value>Təsdiqlə</value> 
+    <value>Sorğu</value> 
   </data> 
   <data name="GIZ_GEN_VIEW_DETAILS" xml:space="preserve"> 
     <value>Ətraflı bax</value> 
@@ -343,7 +343,7 @@
     <value>Sürətli giriş üçün bunu Mobil versiyamız ilə skan edin</value> 
   </data> 
   <data name="GIZ_LOGIN_QR_TITLE" xml:space="preserve"> 
-    <value>QR kodu ilə giriş edin</value> 
+    <value>QR kodla giriş</value> 
   </data> 
   <data name="GIZ_LOGIN_RESERVATION_WARNING_MESSAGE" xml:space="preserve"> 
     <value>İndi giriş etsəniz, göstərilən vaxtda avtomatik olaraq sistemdən çıxacaqsınız.</value> 
@@ -352,13 +352,13 @@
     <value>Bu kompüter {0}'da rezerv edilib.</value> 
   </data> 
   <data name="GIZ_LOGIN_SIGN_IN_TITLE" xml:space="preserve"> 
-    <value>Giriş et</value> 
+    <value>Giriş</value> 
   </data> 
   <data name="GIZ_LOGIN_SIGN_UP_NOW" xml:space="preserve"> 
     <value>Üzv ol</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_IS_HIDDEN" xml:space="preserve"> 
-    <value>Balansı göstərmə</value> 
+    <value>Balans məlumatları göstərilmir</value> 
   </data> 
   <data name="GIZ_NOTIFICATIONS_MARK_ALL_AS_READ" xml:space="preserve"> 
     <value>Hamsını oxundu olaraq işarələ</value> 
@@ -439,7 +439,7 @@
     <value>Üzv ol</value> 
   </data> 
   <data name="GIZ_REGISTRATION_SIGN_IN" xml:space="preserve"> 
-    <value>Giriş et</value> 
+    <value>Giriş</value> 
   </data> 
   <data name="GIZ_SHOP_ADD_TO_CART" xml:space="preserve"> 
     <value>Sifarişə əlavə et</value> 
@@ -451,7 +451,7 @@
     <value>Fəaliyyət dövrü</value> 
   </data> 
   <data name="GIZ_SHOP_CARD_TIME_PRODUCT_DESCRIPTION" xml:space="preserve"> 
-    <value>Paketin təsviri:</value> 
+    <value>Paketə daxildir:</value> 
   </data> 
   <data name="GIZ_SHOP_CARD_TIME_PRODUCT_LIFE_TIME" xml:space="preserve"> 
     <value>Təklifin bitmə müddəti</value> 
@@ -466,10 +466,10 @@
     <value>Ödəniş et</value> 
   </data> 
   <data name="GIZ_SHOP_EARNED_POINTS" xml:space="preserve"> 
-    <value>Hədiyyə Coin</value> 
+    <value>Qazanacağınız Hədiyyə Coin</value> 
   </data> 
   <data name="GIZ_SHOP_NO_PRODUCTS_MESSAGE" xml:space="preserve"> 
-    <value>Heç bir təklif tapılmadı</value> 
+    <value>Boşdur</value> 
   </data> 
   <data name="GIZ_SHOP_NO_PRODUCTS_RETRY_MESSAGE" xml:space="preserve"> 
     <value>Başlamaq üçün məhsullar əlavə edin</value> 
@@ -487,7 +487,7 @@
     <value>Ödəniş üsulu</value> 
   </data> 
   <data name="GIZ_SHOP_PLACE_ORDER" xml:space="preserve"> 
-    <value>Sifariş edin</value> 
+    <value>Sifariş et</value> 
   </data> 
   <data name="GIZ_SHOP_PRICE" xml:space="preserve"> 
     <value>Qiymət</value> 
@@ -562,7 +562,7 @@
     <value>Mövcud zaman</value> 
   </data> 
   <data name="GIZ_USER_BASIC_INFO" xml:space="preserve"> 
-    <value>Əsas məlumat</value> 
+    <value>Əsas məlumatlar</value> 
   </data> 
   <data name="GIZ_USER_BIRTH_DATE" xml:space="preserve"> 
     <value>Doğum tarixi</value> 
@@ -715,7 +715,7 @@
     <value>Dəqiqləşdirilməmiş dəyər</value> 
   </data> 
   <data name="GIZ_USER_LOCK_SCREEN_ENTER_CODE" xml:space="preserve"> 
-    <value>Davam etmək üçün kodu qeyd edin</value> 
+    <value>Kilidi aç</value> 
   </data> 
   <data name="GIZ_USER_LOCK_SCREEN_FORGOT_PIN" xml:space="preserve"> 
     <value>PIN kodu unuttum</value> 
@@ -766,7 +766,7 @@
     <value>Yeni versiyalar</value> 
   </data> 
   <data name="GIZ_APP_FILTERS_POPULAR_APPS" xml:space="preserve"> 
-    <value>Populyar təkliflər</value> 
+    <value>Ən çox istifadə edilən</value> 
   </data> 
   <data name="GIZ_APP_FILTERS_RECENTLY_ADDED" xml:space="preserve"> 
     <value>Son əlavə edilənlər</value> 
@@ -844,19 +844,19 @@
     <value>Geri</value> 
   </data> 
   <data name="GIZ_GEN_DETAILS" xml:space="preserve"> 
-    <value>Ətraflı</value> 
+    <value>Başlat</value> 
   </data> 
   <data name="GIZ_GEN_POPULAR_APPS" xml:space="preserve"> 
-    <value>Populyar proqramlar</value> 
+    <value>Ən çox istifadə edilən</value> 
   </data> 
   <data name="GIZ_GEN_POPULAR_PRODUCTS" xml:space="preserve"> 
-    <value>Populyar məhsullar</value> 
+    <value>Ən çox sifariş edilən</value> 
   </data> 
   <data name="GIZ_USER_PURCHASES_HISTORY" xml:space="preserve"> 
-    <value>Alışveriş arxivi</value> 
+    <value>Sifariş tarixçəsi</value> 
   </data> 
   <data name="GIZ_PRODUCT_TIME_EXPIRATION_ACTION_TIME" xml:space="preserve"> 
-    <value>Tarix</value> 
+    <value>İstifadəsi mümkündür</value> 
   </data> 
   <data name="GIZ_PRODUCT_TIME_EXPIRATION_AFTER_LOGOUT" xml:space="preserve"> 
     <value>Profildən çıxdıqdan sonra</value> 
@@ -868,7 +868,7 @@
     <value>İstifadədən sonra</value> 
   </data> 
   <data name="GIZ_PRODUCT_TIME_EXPIRATION_BUYING_TIME" xml:space="preserve"> 
-    <value>Alış vaxtı</value> 
+    <value>Satışı keçərlidir</value> 
   </data> 
   <data name="GIZ_PRODUCT_TIME_EXPIRATION_DAY_ABBREVIATED" xml:space="preserve"> 
     <value>g.</value> 
@@ -901,7 +901,7 @@
     <value>{0} başlamadı :(</value> 
   </data> 
   <data name="GIZ_SHOP_CARD_BUNDLE_BUNDLE_DESCRIPTION" xml:space="preserve"> 
-    <value>Paketin təsviri:</value> 
+    <value>Paketə daxildir:</value> 
   </data> 
   <data name="GIZ_SHOP_CARD_PURCHASE_DETAILS" xml:space="preserve"> 
     <value>Sifariş təfərrüatları:</value> 
@@ -961,10 +961,10 @@
     <value>Uğurlu</value> 
   </data> 
   <data name="GIZ_PRODUCT_DETAILS_LESS" xml:space="preserve"> 
-    <value>Daha az</value> 
+    <value>Gizlət</value> 
   </data> 
   <data name="GIZ_PRODUCT_DETAILS_MORE" xml:space="preserve"> 
-    <value>Daha çox</value> 
+    <value>Ətraflı</value> 
   </data> 
   <data name="GIZ_USER_CONFIRMATION_VE_CONFIRMATION_CODE_IS_REQUIRED" xml:space="preserve"> 
     <value>Təsdiq kodu xanası boş olmamalıdır.</value> 
@@ -1036,28 +1036,28 @@
     <value>Maksimum tətbiq sayı</value> 
   </data> 
   <data name="GIZ_APP_EXE_ABORT_LAUNCH_VERIFICATION_MESSAGE" xml:space="preserve"> 
-    <value>İcra olunan tapşırığı dayandırmaq istədiyinizə əminsiniz?</value> 
+    <value>Dayandırmaq istədiyinizə əminsiniz?</value> 
   </data> 
   <data name="GIZ_APP_EXE_ABORT_LAUNCH_VERIFICATION_TITLE" xml:space="preserve"> 
-    <value>Təsdiqlə</value> 
+    <value>Sorğu</value> 
   </data> 
   <data name="GIZ_APP_EXE_REPAIR_VERIFICATION_MESSAGE" xml:space="preserve"> 
-    <value>İcra edilən tapşırığı sıfırdan təkrar başlatmaq istəyirsiniz?</value> 
+    <value>Sıfırdan təkrar başlatmaq istəyirsiniz?</value> 
   </data> 
   <data name="GIZ_APP_EXE_REPAIR_VERIFICATION_TITLE" xml:space="preserve"> 
-    <value>Təsdiqlə</value> 
+    <value>Sorğu</value> 
   </data> 
   <data name="GIZ_APP_EXE_TERMINATE_VERIFICATION_MESSAGE" xml:space="preserve"> 
-    <value>İcra olunan tapşırığı dayandırmaq istədiyinizə əminsiniz?</value> 
+    <value>Dayandırmaq istədiyinizə əminsiniz?</value> 
   </data> 
   <data name="GIZ_APP_EXE_TERMINATE_VERIFICATION_TITLE" xml:space="preserve"> 
-    <value>Təsdiqlə</value> 
+    <value>Sorğu</value> 
   </data> 
   <data name="GIZ_CHANGE_PASSWORD_ERROR_MESSAGE" xml:space="preserve"> 
     <value>Şifrənin dəyişdirilməsi mümkün olmadı!</value> 
   </data> 
   <data name="GIZ_LOGOUT_VERIFICATION_TITLE" xml:space="preserve"> 
-    <value>Təsdiqlə</value> 
+    <value>Sorğu</value> 
   </data> 
   <data name="GIZ_INSUFFICIENT_DEPOSITS_MESSAGE" xml:space="preserve"> 
     <value>Bu sifarişi vermək üçün kifayət qədər balansınız yoxdur.</value> 
@@ -1108,7 +1108,7 @@
     <value>Uğurlu</value> 
   </data> 
   <data name="GIZ_USAGE_TYPE_RATE" xml:space="preserve"> 
-    <value>Dərəcələndirmə</value> 
+    <value>Balans</value> 
   </data> 
   <data name="GIZ_USAGE_TYPE_TIME_FIXED" xml:space="preserve"> 
     <value>Sabit vaxt</value> 
@@ -1178,7 +1178,7 @@ Zəhmət olmasa balansınızı artırın.</value>
     <value>Mobil nömrə yanlışdır</value> 
   </data> 
   <data name="GIZ_USER_PURCHASES_ORDER" xml:space="preserve"> 
-    <value>Sifariş</value> 
+    <value>Sifariş başlığı</value> 
   </data> 
   <data name="GIZ_USER_PURCHASES_ORDER_DATE" xml:space="preserve"> 
     <value>Tarix</value> 
@@ -1260,5 +1260,8 @@ Zəhmət olmasa balansınızı artırın.</value>
   </data> 
   <data name="GIZ_GEN_VE_INVALID_FIELD" xml:space="preserve"> 
     <value>Bu xana doğru qeyd edilməyib</value> 
+  </data> 
+  <data name="GIZ_USER_PROFILE_USERNAME_TIP" xml:space="preserve"> 
+    <value>Digər istifadəçilər istifadəçi adınızı görəcəklər</value> 
   </data> 
 </root>
