--- a/Gizmo.Client.UI.Resources/Properties/Resources.el-gr.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.el-gr.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: el-GR, Greek (Greece)
   Exported by: Oleg Savelos
-  Exported at: Tue, 18 Jul 2023 16:58:36 +0300 
+  Exported at: Thu, 20 Jul 2023 15:11:27 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -1260,5 +1260,8 @@
   </data> 
   <data name="GIZ_GEN_VE_INVALID_FIELD" xml:space="preserve"> 
     <value>Το πεδίο δεν είναι έγκυρο.</value> 
+  </data> 
+  <data name="GIZ_USER_PROFILE_USERNAME_TIP" xml:space="preserve"> 
+    <value>Οι άλλοι χρήστες θα βλέπουν το όνομα χρήστη</value> 
   </data> 
 </root>
