--- a/Gizmo.Client.UI.Resources/Properties/Resources.es-bo.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.es-bo.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: es-BO, Spanish (Bolivia)
   Exported by: Oleg Savelos
-  Exported at: Tue, 18 Jul 2023 16:58:38 +0300 
+  Exported at: Thu, 20 Jul 2023 15:11:28 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -1260,5 +1260,8 @@ Por favor recarga tu cuenta.</value>
   </data> 
   <data name="GIZ_GEN_VE_INVALID_FIELD" xml:space="preserve"> 
     <value>El campo no es válido.</value> 
+  </data> 
+  <data name="GIZ_USER_PROFILE_USERNAME_TIP" xml:space="preserve"> 
+    <value>Otras usuarios verán tu nombre de usuario</value> 
   </data> 
 </root>
