--- a/Gizmo.Client.UI.Resources/Properties/Resources.ru-ru.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.ru-ru.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: ru-RU, Russian (Russia)
   Exported by: Oleg Savelos
-  Exported at: Tue, 18 Jul 2023 16:58:37 +0300 
+  Exported at: Thu, 20 Jul 2023 15:11:27 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -961,10 +961,10 @@
     <value>Успех</value> 
   </data> 
   <data name="GIZ_PRODUCT_DETAILS_LESS" xml:space="preserve"> 
-    <value>Меньше</value> 
+    <value>Свернуть</value> 
   </data> 
   <data name="GIZ_PRODUCT_DETAILS_MORE" xml:space="preserve"> 
-    <value>Больше</value> 
+    <value>Развернуть</value> 
   </data> 
   <data name="GIZ_USER_CONFIRMATION_VE_CONFIRMATION_CODE_IS_REQUIRED" xml:space="preserve"> 
     <value>Необходимо заполнить поле кода подтверждения.</value> 
@@ -1260,5 +1260,8 @@
   </data> 
   <data name="GIZ_GEN_VE_INVALID_FIELD" xml:space="preserve"> 
     <value>Поле является недопустимым.</value> 
+  </data> 
+  <data name="GIZ_USER_PROFILE_USERNAME_TIP" xml:space="preserve"> 
+    <value>Другие пользователи увидят ваше имя пользователя</value> 
   </data> 
 </root>
