--- a/Gizmo.Client.UI.Resources/Properties/Resources.es-es.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.es-es.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: es-ES, Spanish
   Exported by: Oleg Savelos
-  Exported at: Thu, 20 Jul 2023 15:11:28 +0300 
+  Exported at: Fri, 21 Jul 2023 11:56:14 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -1262,6 +1262,6 @@ Por favor recargue su cuenta ahora.</value>
     <value>El campo no es válido.</value> 
   </data> 
   <data name="GIZ_USER_PROFILE_USERNAME_TIP" xml:space="preserve"> 
-    <value>Otras usuarios verán tu nombre de usuario</value> 
+    <value>Otros usuarios verán tu nombre de usuario</value> 
   </data> 
 </root>
