--- a/Gizmo.Client.UI.Resources/Properties/Resources.pt-BR.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.pt-BR.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: pt-BR, Brazilian Portuguese
   Exported by: Oleg Savelos
-  Exported at: Thu, 20 Jul 2023 15:11:26 +0300 
+  Exported at: Fri, 21 Jul 2023 11:56:12 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -1262,6 +1262,6 @@ Por favor, recarregue sua conta agora.</value>
     <value>O campo é inválido.</value> 
   </data> 
   <data name="GIZ_USER_PROFILE_USERNAME_TIP" xml:space="preserve"> 
-    <value>Outros usuários verão seu nome de usuário</value> 
+    <value>Outros usuários vão ver seu nome de usuário</value> 
   </data> 
 </root>
