--- a/Gizmo.Client.UI.Resources/Properties/Resources.el-gr.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.el-gr.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: el-GR, Greek (Greece)
   Exported by: Oleg Savelos
-  Exported at: Fri, 21 Jul 2023 11:56:13 +0300 
+  Exported at: Thu, 24 Aug 2023 15:01:43 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -1263,5 +1263,17 @@
   </data> 
   <data name="GIZ_USER_PROFILE_USERNAME_TIP" xml:space="preserve"> 
     <value>Οι άλλοι χρήστες θα βλέπουν το όνομα χρήστη</value> 
+  </data> 
+  <data name="GIZ_GEN_LICENSE_RESERVATION_FAILED" xml:space="preserve"> 
+    <value>Αποτυχία δέσμευσης άδειας χρήσης για το {0}.</value> 
+  </data> 
+  <data name="GIZ_PRODUCT_NOT_AVAILABLE" xml:space="preserve"> 
+    <value>Δεν είναι διαθέσιμο.</value> 
+  </data> 
+  <data name="GIZ_PRODUCT_NOT_AVAILABLE_ON_THIS_HOST" xml:space="preserve"> 
+    <value>Δεν είναι διαθέσιμο σε αυτό το τερματικό.</value> 
+  </data> 
+  <data name="GIZ_REGISTRATION_VE_WHITE_SPACE_NOT_ALLOWED" xml:space="preserve"> 
+    <value>Κενά μη επιτρεπτά</value> 
   </data> 
 </root>
