--- a/Gizmo.Client.UI.Resources/Properties/Resources.da-dk.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.da-dk.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: da-DK, Danish (Denmark)
   Exported by: Oleg Savelos
-  Exported at: Fri, 25 Aug 2023 15:06:14 +0300 
+  Exported at: Tue, 29 Aug 2023 09:04:12 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -1267,15 +1267,15 @@ Genoplad venligst din konto nu.</value>
     <value>Andre brugere vil se dit brugernavn</value> 
   </data> 
   <data name="GIZ_GEN_LICENSE_RESERVATION_FAILED" xml:space="preserve"> 
-    <value>License reservation failed for {0}.</value> 
+    <value>GIZ_GEN_LICENS_RESERVATION_FEJL</value> 
   </data> 
   <data name="GIZ_PRODUCT_NOT_AVAILABLE" xml:space="preserve"> 
-    <value>Not available.</value> 
+    <value>GIZ_PRODUKT_ER_IKKE_TILGÆNGELIG</value> 
   </data> 
   <data name="GIZ_PRODUCT_NOT_AVAILABLE_ON_THIS_HOST" xml:space="preserve"> 
-    <value>Not available on this host.</value> 
+    <value>GIZ_PRODUKT_ER_IKKE_TILGÆNGELIG_PÅ_DENNE_VÆRT</value> 
   </data> 
   <data name="GIZ_REGISTRATION_VE_WHITE_SPACE_NOT_ALLOWED" xml:space="preserve"> 
-    <value>Whitespaces not allowed</value> 
+    <value>GIZ_REGISTRATION_VE_HVID_MELLEMRUM_IKKE_TILLADT</value> 
   </data> 
 </root>
