--- a/Gizmo.Client.UI.Resources/Properties/Resources.es-es.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.es-es.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: es-ES, Spanish
   Exported by: Oleg Savelos
-  Exported at: Fri, 25 Aug 2023 15:06:15 +0300 
+  Exported at: Tue, 29 Aug 2023 09:04:13 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -1265,15 +1265,15 @@ Por favor recargue su cuenta ahora.</value>
     <value>Otros usuarios verán tu nombre de usuario</value> 
   </data> 
   <data name="GIZ_GEN_LICENSE_RESERVATION_FAILED" xml:space="preserve"> 
-    <value>License reservation failed for {0}.</value> 
+    <value>La reserva de licencia falló para {0}.</value> 
   </data> 
   <data name="GIZ_PRODUCT_NOT_AVAILABLE" xml:space="preserve"> 
-    <value>Not available.</value> 
+    <value>No disponible.</value> 
   </data> 
   <data name="GIZ_PRODUCT_NOT_AVAILABLE_ON_THIS_HOST" xml:space="preserve"> 
-    <value>Not available on this host.</value> 
+    <value>No disponible en este ordenador.</value> 
   </data> 
   <data name="GIZ_REGISTRATION_VE_WHITE_SPACE_NOT_ALLOWED" xml:space="preserve"> 
-    <value>Whitespaces not allowed</value> 
+    <value>Los espacios en blanco no están permitidos</value> 
   </data> 
 </root>
