--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -1387,4 +1387,22 @@ Please recharge your account now.</value>
   <data name="GIZ_USER_TIME_PRODUCTS_TITLE" xml:space="preserve">
     <value>Available time</value>
   </data>
+  <data name="GIZ_MENU_BALANCE_TOOLTIP_CLOSE_BALANCE_MESSAGE" xml:space="preserve">
+    <value>Don't forget to close your bill at the end of the session</value>
+  </data>
+  <data name="GIZ_MENU_BALANCE_TOOLTIP_CREDIT" xml:space="preserve">
+    <value>Credit is available on the account</value>
+  </data>
+  <data name="GIZ_MENU_BALANCE_TOOLTIP_GO_TO_SHOP" xml:space="preserve">
+    <value>Go to the Shop</value>
+  </data>
+  <data name="GIZ_MENU_BALANCE_TOOLTIP_SESSION_WILL_EXPIRE_MESSAGE" xml:space="preserve">
+    <value>When the current time expires, the session will be ended</value>
+  </data>
+  <data name="GIZ_MENU_BALANCE_TOOLTIP_SESSION_WILL_NOT_EXPIRE_MESSAGE" xml:space="preserve">
+    <value>The session will not end while you have the unlimited time credit option enabled</value>
+  </data>
+  <data name="GIZ_MENU_BALANCE_TOOLTIP_TOP_UP" xml:space="preserve">
+    <value>Top up balance</value>
+  </data>
 </root>
